# telegram-notification-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  debug-client.js  deploy.sh  mcp.example.json  package.json  pnpm-lock.yaml  test-client.html  test-sse.sh  tsconfig.json  wrangler.toml  wrangler.toml.example
src/: index.ts  lib.rs  mcp.rs  telegram.rs
