[package]
name = "telegram-notification-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["macros"] }
url = "2.5"
base64 = "0.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"
