[package]
name = "telegram-notification-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP Server for Telegram notifications via Cloudflare Workers"
repository = "https://github.com/kkuan/telegram-notification-mcp"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
